syntax = "proto3";

package chat;
option go_package="./chat";

message loginReq {
  string username = 1;
  string password = 2;
}

message loginRsp {

}

message userInfoReq {
  string uid = 1;
  string username = 2;
}

message userInfoRsp {

}

service Chat {
  rpc login(loginReq) returns(loginRsp);
  rpc userInfo (userInfoReq) returns(userInfoRsp);
}




